typescript/checker/tests/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration22.ts.stderr
error: TS2389 {
    span: Span {
        lo: BytePos(
            27,
        ),
        hi: BytePos(
            32,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration22.ts:3:5
  |
3 |     "bar"() { }
  |     ^^^^^

